Aded images and updates

--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,9 @@
 <h1>Institue of Java Software Engineering</h1>
 <h2>Batch - GDSE 57 - 58</h2>
 <h2>Hello there....!</h2>
+<img src="assets/images/application.png" width="300">
 
-</body>
+  </body>
 </html>
 
 
