Aded images and updates

--- a/index.html
+++ b/index.html
@@ -2,15 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My WEB IT SOLUTIONS</title>
+    <link rel="icon" href="assets/images/logo.png">
 
 </head>
 <body>
 
-<h1>Institue of Java Software Engineering</h1>
-<h2>Batch - GDSE 57 - 58</h2>
-<h2>Hello there....!</h2>
-<img src="assets/images/application.png" width="300">
+ <section>
+  <main>
+      <h1>MY WEB IT SOLUTIONS</h1>
+          <nav class ="crumbs">
+               <li><a href="#">HOME</a></li>
+               <li><a href="#">ABOUT</a></li>
+               <li><a href="#">BLOG</a></li>
+               <li><a href="#">SKILL</a></li>
+               <li><a href="#">EDUCATION</a></li>
+               <li><a href="#">MY PROJECTS</a></li>
+               <li><a href="#">CONTACT US</a></li>
+          </nav>
+  </main>
+
+ <section>
+
+ </section>
+        <header>
+            <div style ="text-align: center"><h1>WELCOME TO MY WEB IT SOLUTIONS</h1></div>
+        </header>
+       <img class = "fit-logo"
+           src="assets/images/logo.png" alt="Error loading Image" width="500">
+      <img class="fit -side-image"
+           src="assets/images/3Images-pack.png" alt="Error loading Image" width="300">
+ </section>
+
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<section></section>
+<footer></footer>
 
 
 </body>
