Update My Profile

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
         body > main {
             position: relative;
+            height: 1580px;
         }
 
         /*Start First Content*/
@@ -116,10 +117,10 @@
         }
         body > main > #SecondContent > div{
             height: 100px;
+            width: 100px;
             margin: auto;
             top:41px;
-            left: 46px;
-            right: 0;
+            right: 715px;
             position: relative;
         }
         body > main > #SecondContent > div > img{
@@ -128,10 +129,11 @@
             box-shadow: 65px 6px 9px -4px #1e272e;
         }
         body > main > #SecondContent > #SecondContentDivOne{
-            height: 80px;
+            height: 100px;
+            width: 920px;
             margin: auto;
             top: -67px;
-            left: 537px;
+            left: 150px;
             position: relative;
 
         }
@@ -141,10 +143,10 @@
         }
         body > main > #SecondContent > #SecondContentDivTwo{
             height: 80px;
-            width: 463px;
+            width: 498px;
             margin: auto;
-            top : -66px;
-            left: 32px;
+            top: -88px;
+            left: -26px;
             position: relative;
         }
         body > main > #SecondContent > #SecondContentDivTwo >p{
@@ -155,8 +157,8 @@
             height: 80px;
             width: 656px;
             margin: auto;
-            top: 108px;
-            left: 0;
+            top: 59px;
+            left: -53px;
             position: relative;
         }
         body > main > #SecondContent > #SecondContentDivThree >p{
@@ -165,9 +167,10 @@
         }
         body > main > #SecondContent > #SecondContentDivFour{
             height: 100px;
+            width: 100px;
             margin: auto;
-            top:-309px;
-            left: 1034px;
+            top:-324px;
+            left: 295px;
             right: 0;
             position: relative;
         }
@@ -175,6 +178,7 @@
 
             height: 543px;
             box-shadow: -2px 6px 9px -4px #2c3e50;
+            border-radius: unset;
             opacity: 30%;
         }
 
@@ -188,6 +192,7 @@
             height: 100vh;
             background-color:#34495e;
         }
+
         body > main > #ThirdContent > header {
             position: absolute;
         }
@@ -199,6 +204,94 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
+        body > main > #ThirdContent > div{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:245px;
+            left: 296px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #ThirdContent > div > img {
+            height: 543px;
+            opacity: 30%;
+        }
+        body > main > #ThirdContent > #ThirdContentDivOne{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:0;
+            left: -688px;
+            position: relative;
+        }
+        body > main > #ThirdContent >#ThirdContentDivOne > img{
+            height: 245px;
+            opacity: unset;
+        }
+        body > main > #ThirdContent > #ThirdContentDivTwo{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top: -100px;
+            left: -155px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #ThirdContent > #ThirdContentDivTwo > img{
+            height: 245px;
+            opacity: unset;
+        }
+        body > main >#ThirdContent >#ThirdContentDivThree{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-201px;
+            left: 376px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #ThirdContent > #ThirdContentDivThree >img{
+            height: 245px;
+            opacity: unset;
+        }
+        body > main >#ThirdContent >#ThirdContentDivFour{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-21px;
+            left: -688px;
+            position: relative;
+        }
+        body > main > #ThirdContent > #ThirdContentDivFour >img{
+            height: 245px;
+            opacity: unset;
+        }
+        body > main > #ThirdContent > #ThirdContentDivFive{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-121px;
+            left: -159px;
+            position: relative;
+        }
+        body > main > #ThirdContent > #ThirdContentDivFive >img{
+            height: 245px;
+            opacity: unset;
+        }
+        body > main > #ThirdContent > #ThirdContentDivSix{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-222px;
+            left: 347px;
+            position: relative;
+        }
+        body > main > #ThirdContent > #ThirdContentDivSix > img{
+            height: 238px;
+            opacity: unset;
+        }
+
         /*End Third Content*/
 
         /*Strat Fourth Content*/
@@ -218,6 +311,18 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
+        /*body > main > #FourthContent > div{
+            height: 100px;
+            margin: auto;
+            top:166px;
+            left: 1034px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #FourthContent > div > img{
+            height: 543px;
+            opacity: 30%;
+        }*/
         /*End Fourth Content*/
 
         /*Strat Fifth Content*/
@@ -235,6 +340,97 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
+        body > main > #FifthContent > div {
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:245px;
+            left: 295px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #FifthContent > div > img{
+            height: 543px;
+            opacity: 30%;
+        }
+        body > main > #FifthContent > #FifthContentDivOne{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:430px;
+            left: -625px;
+            position: relative;
+        }
+        body > main > #FifthContent > #FifthContentDivOne > img{
+            height: 230px;
+            opacity: unset;
+            border-radius: 360%;
+        }
+        body > main > #FifthContent > #FifthContentDivO{
+            height: 80px;
+            width: 498px;
+            margin: auto;
+            top: 422px;
+            left: -207px;
+            position: relative;
+
+        }
+        body > main > #FifthContent > #FifthContentDivO > h3{
+            font-size: 38px;
+            color: #16a085;
+        }
+        body > main > #FifthContent > #FifthContentDivTwo{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-128px;
+            left: -457px;
+            position: relative;
+        }
+        body > main > #FifthContent > #FifthContentDivTwo > img{
+            height: 300px;
+            opacity: unset;
+            border-radius: 360%;
+        }
+        body > main > #FifthContent > #FifthContentT{
+            height: 80px;
+            width: 498px;
+            margin: auto;
+            top: -112px;
+            left: 56px;
+            position: relative;
+        }
+        body > main > #FifthContent > #FifthContentT > h3{
+            font-size: 38px;
+            color: #16a085;
+        }
+        body > main > #FifthContent > #FifthContentDivThree{
+            height: 100px;
+            width: 100px;
+            margin: auto;
+            top:-373px;
+            left: 272px;
+            position: relative;
+        }
+        body > main > #FifthContent > #FifthContentDivThree > img{
+            height: 335px;
+            opacity: unset;
+            border-radius: 360%;
+        }
+        body > main > #FifthContent > #FifthContentTh {
+            height: 80px;
+            width: 498px;
+            margin: auto;
+            top: -174px;
+            left: 531px;
+            position: relative;
+        }
+        body > main > #FifthContent > #FifthContentTh > h3{
+            font-size: 38px;
+            color: #16a085;
+        }
+
+
         /*End FifthContent*/
 
         /*Strat Sixth Content*/
@@ -252,6 +448,18 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
+        /*body > main > #SixthContent > div{
+            height: 100px;
+            margin: auto;
+            top:165px;
+            left: 1034px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #SixthContent > div > img{
+            height: 543px;
+            opacity: 30%;
+        }*/
         /*End Sixth Content*/
 
         /*Start Seventh Content*/
@@ -269,6 +477,18 @@
             font-size:35px ;
             font-family:"Book Antiqua" ;
         }
+        /*body > main > #SeventhContent > div{
+            height: 100px;
+            margin: auto;
+            top:245px;
+            left: 1034px;
+            right: 0;
+            position: relative;
+        }
+        body > main > #SeventhContent > div > img{
+            height: 543px;
+            opacity: 30%;
+        }*/
         /*End Seventh Content*/
 
     </style>
@@ -323,7 +543,7 @@
                  <p>& I'm FreeLancer I Create Web Applications, Desktop Applications And Mobile Applications...!</p>
             </div>
              <div id="SecondContentDivFour">
-                 <img  src="assets/images/backgroundLogo.png" alt="Error Loding Image">
+                 <img  src="assets/images/backgroundLogo.png" alt="Error Loading Image">
              </div>
          </section>
          <!--End Second Content -->
@@ -333,6 +553,29 @@
               <header>
                    <h1>BLOG</h1>
               </header>
+              <div>
+                  <img  src="assets/images/backgroundLogo.png" alt="Error Loading Image">
+              </div>
+
+             <div id="ThirdContentDivOne">
+                 <img  src="assets/images/Post1.PNG" alt="Error Loading Image">
+             </div>
+             <div id="ThirdContentDivTwo">
+                 <img  src="assets/images/Post2.PNG" alt="Error Loading Image">
+             </div>
+             <div id="ThirdContentDivThree">
+                 <img src="assets/images/Post3.PNG" alt="Error Loading Image">
+             </div>
+              <div id="ThirdContentDivFour">
+                  <img src="assets/images/Post4.PNG" alt="Error Loading Image">
+              </div>
+              <div id="ThirdContentDivFive">
+                  <img src="assets/images/Post5.PNG" alt="Error Loading Image">
+              </div>
+              <div id="ThirdContentDivSix">
+                  <img src="assets/images/Post6.PNG" alt="Error Loading Image">
+              </div>
+
           </section>
           <!--End Third Content -->
 
@@ -341,6 +584,9 @@
                <header>
                     <h1>MY SKILLS</h1>
                </header>
+          <!--<div>
+              <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
+          </div>-->
           </section>
           <!--End Fourth Content -->
 
@@ -349,6 +595,34 @@
                <header>
                     <h1>EDUCATION</h1>
                </header>
+              <div>
+                  <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
+              </div>
+
+              <div id="FifthContentDivOne">
+                  <img src="assets/images/MySchool.jpg" alt="Error Loading Image">
+              </div>
+
+              <div id="FifthContentDivO">
+                   <h3>Study at Joseph Vaz College...!</h3>
+              </div>
+
+              <div id="FifthContentDivTwo">
+                  <img src="assets/images/myUniversity.png" alt="Error Loading Image">
+              </div>
+
+              <div id="FifthContentT">
+                  <h3>Study at NSBM GREEN UNIVERSITY...!</h3>
+              </div>
+
+              <div id="FifthContentDivThree">
+                  <img src="assets/images/ijseWhite.png" alt="Error Loading Image">
+              </div>
+
+              <div id="FifthContentTh">
+                  <h3>Study at Institute of JAVA SOFTWARE ENGINNERING...!</h3>
+              </div>
+
           </section>
           <!--End Fifth Content -->
 
@@ -357,6 +631,9 @@
                <header>
                    <h1>MY PROJECTS</h1>
                </header>
+              <!--<div>
+                  <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
+              </div>-->
           </section>
           <!--End Sixth Content -->
 
@@ -365,6 +642,9 @@
                <header>
                     <h1>CONTACT </h1>
                </header>
+            <!-- <div>
+                 <img src="assets/images/backgroundLogo.png" alt="Error Loading Image">
+             </div> -->
          </section>
          <!--End Seventh Content -->
 
